# auth_ms

./: .flake8  .gitignore  .gitpod.yml  Dockerfile  Dockerfile.test  Makefile  README.md  fake.ini  pyproject.toml  requirements.txt  requirements_test.txt
app/: main.py
app/controller/: __init__.py  create_user.py  disable_user.py  edit_user.py  forgot_password.py  get_details.py  get_token.py  new_email.py  reset_password.py  update_password.py
app/database/: __init__.py  database.py
app/email_handler/: __init__.py  email.py
app/env_vars/: __init__.py
app/exceptions/: __init__.py
app/models/: __init__.py  create_user.py  forgot_password.py  user.py
app/queries/: __init__.py  create_user.py  forgot_password.py  user.py
app/router/: __init__.py  router.py
app/tests/: constants.py  helpers.py  test_user.py
app/utils/: __init__.py  res_req_models.py  utils.py
auth_ms/: .env.example  db.db  main.py  metadata.py
auth_ms/database/: __init__.py  database.py
auth_ms/helpers/: __init__.py  helpers.py
auth_ms/models/: __init__.py  user.py
compose/: compose.test.yaml  compose.yaml
docker/: app.Dockerfile  compose.yaml  mongo_init.js.example  test_app.Dockerfile  test_compose.yaml
requirements/: requirements.dev.txt  requirements.txt
tests/: test_auth_ms.py
